; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_cms.c_create_msgring_thread.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_cms.c_create_msgring_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msgring_thread = type { %struct.thread* }
%struct.thread = type { i32 }

@msgring_threads = common dso_local global %struct.msgring_thread* null, align 8
@msgring_process = common dso_local global i32 0, align 4
@msgring_proc = common dso_local global i32 0, align 4
@RFSTOPPED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"msgrngproc\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"msgthr%d\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"kproc_kthread_add() failed with %d\00", align 1
@PRI_ITHD = common dso_local global i32 0, align 4
@SRQ_INTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @create_msgring_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_msgring_thread(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.msgring_thread*, align 8
  %4 = alloca %struct.thread*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load %struct.msgring_thread*, %struct.msgring_thread** @msgring_threads, align 8
  %7 = load i32, i32* %2, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds %struct.msgring_thread, %struct.msgring_thread* %6, i64 %8
  store %struct.msgring_thread* %9, %struct.msgring_thread** %3, align 8
  %10 = load i32, i32* @msgring_process, align 4
  %11 = load i32, i32* %2, align 4
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to i8*
  %14 = load i32, i32* @RFSTOPPED, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @kproc_kthread_add(i32 %10, i8* %13, i32* @msgring_proc, %struct.thread** %4, i32 %14, i32 2, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %1
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @panic(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %19, %1
  %23 = load %struct.thread*, %struct.thread** %4, align 8
  %24 = load %struct.msgring_thread*, %struct.msgring_thread** %3, align 8
  %25 = getelementptr inbounds %struct.msgring_thread, %struct.msgring_thread* %24, i32 0, i32 0
  store %struct.thread* %23, %struct.thread** %25, align 8
  %26 = load %struct.thread*, %struct.thread** %4, align 8
  %27 = call i32 @thread_lock(%struct.thread* %26)
  %28 = load %struct.thread*, %struct.thread** %4, align 8
  %29 = load i32, i32* @PRI_ITHD, align 4
  %30 = call i32 @sched_class(%struct.thread* %28, i32 %29)
  %31 = load %struct.thread*, %struct.thread** %4, align 8
  %32 = load i32, i32* @SRQ_INTR, align 4
  %33 = call i32 @sched_add(%struct.thread* %31, i32 %32)
  %34 = load %struct.thread*, %struct.thread** %4, align 8
  %35 = call i32 @thread_unlock(%struct.thread* %34)
  ret void
}

declare dso_local i32 @kproc_kthread_add(i32, i8*, i32*, %struct.thread**, i32, i32, i8*, i8*, i32) #1

declare dso_local i32 @panic(i8*, i32) #1

declare dso_local i32 @thread_lock(%struct.thread*) #1

declare dso_local i32 @sched_class(%struct.thread*, i32) #1

declare dso_local i32 @sched_add(%struct.thread*, i32) #1

declare dso_local i32 @thread_unlock(%struct.thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
